@@ -35,8 +35,6 @@
   copying them... bad idea
 - no-create to stop creation of nonexistent mboxes/maildirs
 - create missing dirs when delivering
-- match command is run as root, is this bad? new option command-user? or
-  use default-user? or _fdm?
 - make-style filtering for tags :S/// etc
 - docs from Thomas@BIC:
 	clarify that first match stops without continue
@@ -51,4 +49,4 @@
 	mention short-circuit evaluation
 	check pipe command user
 - document cache commands
-
+- document command-user
