@@ -1,3 +1,9 @@
+10 October 2007
+
+* New option: command-user. This is the user used to run exec/pipe match
+  conditions if one is not specified. The default is the user who ran fdm
+  (root if running as root).
+
 09 October 2007
 
 * Command line cache manipulation. The following commands are available:
@@ -741,4 +747,4 @@
   the mail was very rarely reallocated, now that the header is added it is.
 * Changed all the descriptions to static buffers and audited use of snprintf.
 
-$Id: CHANGES,v 1.174 2007-10-09 11:38:36 nicm Exp $
+$Id: CHANGES,v 1.175 2007-10-10 08:58:26 nicm Exp $
